wrapped text in containers for the Departments.pug, Majors.pug, and fixed redundancy in index/layout with the navbar code to better reflect the rest

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 body {
-  padding: 50px;
+  margin: 0;
+  padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -18,10 +19,14 @@ a:hover {
 }
 
 .topnav {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
   overflow: hidden;
+  display: block;
   background-color: #500000; <!-- maroon -->
   margin: 0;
-  padding: 0;
+  top: 0;
+  padding: 8px;
 }
 
 .topnav a {
@@ -43,17 +48,9 @@ a:hover {
   color: white;
 }
 
-.topnav button {
-  float: right;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  background-color: #500000;
-}
-
-.topnav button:hover {
-  background-color: #ddd;
-  color: black;
+.container{
+  padding: 30px; /* fills out the container */
+  max-width: 100%; /* container to adjust on smaller widths */
+  background-color: #D3D3D3;
+  text-align: left;
 }
